Add game-header to index.html.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<h1 class="game-header">FEND GAME</h1>
 	<hr>
 	<div class="scoreboard">
 		<h2>Score: <span class="score">0</span> | Lives: <span class="lives">0</span></h2>
